Added authentication to routing
