# personalProject/server.js
@@ -6,15 +6,11 @@ const session = require('express-session');
 const cors = require('cors');
 const GitHubStrategy = require('passport-github2').Strategy;
 
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('./swagger.json');
-
 const app = express();
 
 const port = process.env.PORT || 3000;
 
 app
-	.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 	.use(bodyParser.json())
 	.use(
 		session({
@@ -43,6 +39,49 @@ app
 	.use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH'] }))
 	.use(cors({ origin: '*' }))
 	.use('/', require('./routes'));
+
+passport.use(
+	new GitHubStrategy(
+		{
+			clientID: process.env.GITHUB_CLIENT_ID,
+			clientSecret: process.env.GITHUB_CLIENT_SECRET,
+			callbackURL: process.env.CALLBACK_URL,
+		},
+		function (accessToken, refreshToken, profile, done) {
+			//User.findOrCreate({github: profile.id }, function(err, user){
+			return done(null, profile);
+			//});
+		}
+	)
+);
+
+passport.serializeUser((user, done) => {
+	done(null, user);
+});
+
+passport.deserializeUser((user, done) => {
+	done(null, user);
+});
+
+app.get('/', (req, res) => {
+	res.send(
+		req.session.user !== undefined
+			? `Logged in as ${req.session.user.displayName}`
+			: 'Logged out'
+	);
+});
+
+app.get(
+	'github/callback',
+	passport.authenticate('github', {
+		failureRedirect: '/api-docs',
+		session: false,
+	}),
+	(req, res) => {
+		req.session.user = req.user;
+		res.redirect('/');
+	}
+);
 
 mongodb.initDb((err, mongodb) => {
 	if (err) {
